-
Bug
-
Resolution: Done
-
P1: Critical
-
5.3.0
-
None
-
Windows, ANGLE
-
aac68a9ef36f75d23877d6ce27b6392612900756 (stable, 25.2.2014, 5.3)
qtbase\examples\opengl\hellogl_es2 crashes on startup on MSVC/MINGW with an qt/stable angle build:
---------------------------
Microsoft Visual C++ Runtime Library
---------------------------
Debug Error!
Program: D:\dev\qt\qt-stable\msvc-2012-32\qtbase\bin\Qt5Cored.dll Module: 5.3.0 File: D:\dev\qt\qt-stable\src\qtbase\src\corelib\global\qglobal.cpp Line: 2124 ASSERT: "m_format != QFontEngine::Format_None" in file d:\dev\qt\qt-stable\msvc-2012-32\qtbase\include\qtgui\5.3.0\qtgui\private\../../../../../../../src/qtbase/src/gui/text/qfontengineglyphcache_p.h, line 72 QMessageLogger::fatal qlogging.cpp 654 0x676b27e0 1 qt_assert qglobal.cpp 2125 0x676aa672 2 QFontEngineGlyphCache::QFontEngineGlyphCache qfontengineglyphcache_p.h 72 0x7ff91bba81aa 3 QTextureGlyphCache::QTextureGlyphCache qtextureglyphcache_p.h 81 0x7ff91bba9c35 4 QImageTextureGlyphCache::QImageTextureGlyphCache qtextureglyphcache_p.h 166 0x7ff91bba83e5 5 QGLTextureGlyphCache::QGLTextureGlyphCache qtextureglyphcache_gl.cpp 59 0x68bbbfd6 6 QGL2PaintEngineExPrivate::drawCachedGlyphs qpaintengineex_opengl2.cpp 1625 0x68bb0fa2 7 QGL2PaintEngineEx::drawTextItem qpaintengineex_opengl2.cpp 1566 0x68bab157 8 QPainterPrivate::drawTextItem qpainter.cpp 6459 0x7ff91bea8807 9 QPainter::drawTextItem qpainter.cpp 6335 0x7ff91bea32c9 10 QPainter::drawText qpainter.cpp 5905 0x7ff91bea2b8e 11 QPainter::drawText qpainter.cpp 5689 0x7ff91bea23f2 12 QPainter::drawText qpainter.h 892 0x7ff91bace013 13 GLWidget::paintGL glwidget.cpp 316 0x7ff79a27575b 14 QGLWidget::glDraw qgl.cpp 4194 0x68b6bf09 15 QGLWidget::paintEvent qgl.cpp 4033 0x68b6bcc3 16 QWidget::event qwidget.cpp 8125 0x681e95d8 17 QGLWidget::event qgl_qpa.cpp 380 0x68bbfbb7 18 QApplicationPrivate::notify_helper qapplication.cpp 3519 0x68180806 19 QApplication::notify qapplication.cpp 3484 0x6817ddaf
Relevant commits: 4de3c5db238f45404feb6c6ce60810a3e11eae84. ( Unify glyph format between QFontEngine and QFontEngineGlyphCache" ), reverting helps.
- is required for
-
QTBUG-36712 Issues to be fixed before 5.3.0 Beta 1 release
-
- Closed
-