Fix texture glyph cache setup in old OpenGL paint engine

Caused assert-crash reported on Windows.

Task-number: QTBUG-37027
Change-Id: If84b970a153570115afb344797728a0b1a04db5b
Reviewed-by: Kai Koehne <kai.koehne@digia.com>